# unsupervised-exploration

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: overview.md
docs/results/: digits_umap_gmm.metrics.json
notebooks/: Lab 8 - Unsupervised learning.ipynb  results_summary.ipynb
scripts/: run_experiment.py  sweep.py
src/unsup/: data.py  evaluate.py  models.py  visualize.py
tests/: test_pipeline.py
